--- a/css/main.css
+++ b/css/main.css
@@ -142,7 +142,7 @@
 
 @keyframes moveInRight-2 {
   0% {
-    transform: translateX(450%) scale(1);
+    transform: translateX(600%) scale(1);
   }
   50% {
     transform: translateX(-10%) scale(1.4);
@@ -187,6 +187,18 @@ body {
 @media only screen and (max-width: 75em) {
   body {
     grid-template-columns: [full-start] minmax(5rem, 1fr) [center-start] repeat(4, minmax(min-content, 25rem)) [center-end] minmax(5rem, 1fr) [full-end];
+  }
+}
+
+@media only screen and (max-width: 58.75em) {
+  body {
+    grid-template-rows: 5rem 55rem repeat(4, min-content);
+  }
+}
+
+@media only screen and (max-width: 30.25em) {
+  body {
+    grid-template-columns: [full-start] minmax(3rem, 1fr) [center-start] repeat(4, minmax(min-content, 25rem)) [center-end] minmax(3rem, 1fr) [full-end];
   }
 }
 
@@ -484,7 +496,7 @@ body {
 
 @media only screen and (max-width: 40em) {
   .form-create-page {
-    margin-bottom: -25rem;
+    grid-column: full-start / full-end;
   }
 }
 
@@ -538,13 +550,6 @@ body {
   color: #61ccb0;
   font-weight: 700;
   text-transform: uppercase;
-}
-
-@media only screen and (max-width: 30.25em) {
-  .form-create-page__select {
-    width: 30rem;
-    margin: 0 3rem;
-  }
 }
 
 .form-create-page__option {
@@ -703,6 +708,13 @@ body {
   }
 }
 
+@media only screen and (max-width: 30.25em) {
+  .form-create-page__table-read-page-2, .form-create-page__table-delete-page-2 {
+    font-size: 1.2rem;
+    grid-template-columns: max-content 30rem;
+  }
+}
+
 .form-create-page__table-delete-page-1 .delete-user, .form-create-page__table-delete-page-2 .delete-user {
   text-decoration: none;
   align-self: center;
@@ -750,6 +762,13 @@ body {
   color: #f7f7f7;
 }
 
+@media only screen and (max-width: 30.25em) {
+  .par--features {
+    width: 20rem;
+    text-align: center;
+  }
+}
+
 .from-right,
 .from-down {
   opacity: 0;
@@ -757,7 +776,7 @@ body {
 
 .from-right.appear {
   opacity: 1;
-  animation: moveInRight-2 5s 2s;
+  animation: moveInRight-2 5s;
   animation-fill-mode: backwards;
 }
 
@@ -781,6 +800,13 @@ body {
   display: grid;
   grid-template-columns: repeat(5, min-content);
   grid-gap: 2rem;
+}
+
+@media only screen and (max-width: 40em) {
+  .social {
+    margin-top: 5rem;
+    margin-left: -4rem;
+  }
 }
 
 .social__link {
@@ -835,21 +861,20 @@ body {
 
 @media only screen and (max-width: 51.5em) {
   .features__1 {
-    margin-top: -30rem;
-  }
-}
-
-@media only screen and (max-width: 40em) {
-  .features__1 {
-    clip-path: polygon(44% 18%, 63% 13%, 100% 8%, 100% 85%, 0 100%, 0 22%);
-    margin-top: -35rem;
-    margin-bottom: -5rem;
+    clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
+    margin-top: 0;
   }
 }
 
 .features__1--create-page {
-  margin-top: -25rem;
+  margin-top: 0;
   clip-path: polygon(0 30%, 100% 30%, 100% 79%, 0 79%);
+}
+
+@media only screen and (max-width: 58.75em) {
+  .features__1--create-page {
+    clip-path: none;
+  }
 }
 
 .features__2 {
@@ -864,11 +889,30 @@ body {
   transition: all 0.5s;
 }
 
-@media only screen and (max-width: 40em) {
+@media only screen and (max-width: 51.5em) {
   .features__2 {
-    grid-template-columns: 1fr;
-    margin: 45rem 10rem 30rem 10rem;
+    grid-template-columns: 30rem;
+    justify-content: center;
+    padding-bottom: 0;
     grid-gap: 7rem;
+    margin: 10rem 0;
+  }
+}
+
+.features__2--create-page {
+  background-color: #61ccb0;
+  grid-column: full-start / full-end;
+  padding: 10rem;
+  margin: 0;
+}
+
+.features__content {
+  display: grid;
+}
+
+@media only screen and (max-width: 30.25em) {
+  .features__content {
+    justify-items: center;
   }
 }
 
@@ -894,13 +938,17 @@ body {
   background-color: #256e7d;
   grid-column: full-start / full-end;
   grid-row: 6 / 7;
-  margin-top: -45vh;
+  margin-top: -20rem;
 }
 
-@media only screen and (max-width: 75em) {
+@media only screen and (max-width: 51.5em) {
   .footer__1 {
-    margin-top: -55vh;
+    margin-top: -.2rem;
   }
+}
+
+.footer__1--create-page {
+  margin: 0;
 }
 
 .footer__2 {
@@ -919,16 +967,27 @@ body {
   }
 }
 
-@media only screen and (max-width: 40em) {
+@media only screen and (max-width: 51.5em) {
   .footer__2 {
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    justify-items: center;
+    margin-top: 10rem;
   }
 }
 
 @media only screen and (max-width: 40em) {
+  .footer__2 {
+    grid-template-columns: 1fr;
+    justify-items: center;
+    margin: 0;
+  }
+}
+
+.footer__2--create-page {
+  padding-top: 5rem;
+}
+
+@media only screen and (max-width: 75em) {
   .footer__2--create-page {
-    margin-top: -30rem;
+    margin-top: 0;
   }
 }
 
@@ -940,9 +999,9 @@ body {
 
 @media only screen and (max-width: 40em) {
   .footer__content {
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
     grid-gap: 3rem;
     width: 50%;
+    margin-top: 5rem;
   }
 }
 
