--- a/sass/components/_paragraph.scss
+++ b/sass/components/_paragraph.scss
@@ -9,4 +9,13 @@
   &--white {
     color: $color-grey-light-1;
   }
+
+  &--features{
+  
+    @media only screen and (max-width: $bp-7) {
+      width: 20rem;
+      text-align: center;
+    }
+  }
+
 }
