--- a/sass/components/_slide-in.scss
+++ b/sass/components/_slide-in.scss
@@ -11,7 +11,7 @@
   // transform: translateX(0);
   // transition: all 3s;
   opacity: 1;
-  animation: moveInRight-2 5s 2s;
+  animation: moveInRight-2 5s;
   animation-fill-mode: backwards;
 }
 
