--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -5,7 +5,7 @@
 
   @media only screen and (max-width: $bp-6) {
     margin: 0;
-  }
+  } 
 
   &__input {
     border: none;
@@ -72,7 +72,7 @@
   justify-items: center;
 
   @media only screen and (max-width: $bp-6) {
-    margin-bottom: -25rem;
+    grid-column: full-start / full-end;
   }
 
   &__input-box,
@@ -131,10 +131,10 @@
     font-weight: $fw-7;
     text-transform: uppercase;
   
-    @media only screen and (max-width: $bp-7) {
-      width: 30rem;
-      margin: 0 3rem;
-    }
+    // @media only screen and (max-width: $bp-7) {
+    //   width: 30rem;
+    //   margin: 0 3rem;
+    // }
   }
 
   &__option {
@@ -342,6 +342,11 @@
     @media only screen and (max-width: $bp-3) {
       display: grid;
       grid-template-columns: max-content 35rem;
+    }
+
+    @media only screen and (max-width: $bp-7) {
+      font-size: 1.2rem;
+      grid-template-columns: max-content 30rem;
     }
 
   }
