--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -131,10 +131,9 @@
     font-weight: $fw-7;
     text-transform: uppercase;
   
-    // @media only screen and (max-width: $bp-7) {
-    //   width: 30rem;
-    //   margin: 0 3rem;
-    // }
+    @media only screen and (max-width: $bp-7) {
+      text-align: center;
+    }
   }
 
   &__option {
@@ -230,49 +229,6 @@
   &__checkbox:checked + &__label--checkbox &__label-span--checkbox::after {
     opacity: 1;
   }
-
-  // &__read-1 {
-  //   grid-column: 1 / -1;
-  //   display: flex;
-    // flex-wrap: wrap;
-    // border: .1rem solid $color-green-light;
-    // border-radius: .5rem;
-    // overflow: hidden;
-    // font-size: 1rem;
-  // }
-
-  // &__read-box {
-  //   display: flex;
-  //   flex-direction: column;
-    // flex-basis: max-content; ne radi!
-    // display: grid;
-
-    // .table-header {
-    //   text-transform: uppercase;
-    //   background-color: $color-tirquize-dark;
-    //   color: $color-grey-light-1;
-    //   font-weight: $fw-7;
-    //   padding: 1rem;
-    //   display: flex;
-    //   justify-content: center;
-      
-      // &--2 {
-      //  width: max-content; 
-      // }
-
-    // }
-
-    // .table-data {
-    //   color: $color-tirquize-dark;
-    //   padding: 0.5rem 1rem;
-    //   border: .1rem solid $color-green-light;
-
-      // &--2 {
-      //   width: max-content;
-      // }
-
-  //   }
-  // }
 
   &__table-read-page-1,
   &__table-read-page-2,
