--- a/css/main.css
+++ b/css/main.css
@@ -555,6 +555,7 @@ body {
 @media only screen and (max-width: 30.25em) {
   .form-create-page__select {
     text-align: center;
+    width: 80vw;
   }
 }
 
